plugins {
    id 'java'
}

group = 'com.manning.junitbook'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {
    // JUnit Jupiter API
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    // JUnit Jupiter Engine
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'

    // commons-logging
    implementation 'commons-logging:commons-logging:1.3.4'

    // Mocking frameworks
    testImplementation 'org.easymock:easymock:5.5.0'
    testImplementation 'org.jmock:jmock-junit5:2.13.1'
    testImplementation 'org.jmock:jmock-legacy:2.13.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.objenesis:objenesis:3.4'

}

test {
    useJUnitPlatform()

    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}
